# cuda-oxide

./: .gitignore  Cargo.toml  README.md  WINDOWS.md  dependency-licenses.csv  flake.nix
.github/workflows/: clippy.yml  examples-compile.yml  fork-ci.yml  nix-flake.yml  unit-tests.yml
crates/cargo-oxide/: Cargo.toml  README.md
crates/cuda-bindings/: build.rs
crates/cuda-device/: README.md
crates/cuda-host/: README.md
crates/cuda-macros/: Cargo.toml  README.md
crates/cuda-oxide-codegen/: Cargo.toml
crates/cuda-oxide-codegen/src/: api.rs  error.rs  export.rs  generated.rs  generated_intrinsic_targets.rs  hooks.rs  lib.rs  llvm_tools.rs  options.rs  pipeline.rs  ptx.rs  target.rs
crates/cuda-oxide-codegen/tests/: compile_to_ptx.rs  spine_kernel_ptx.rs
crates/cuda-oxide-compiler/: Cargo.toml  README.md
crates/cuda-oxide-compiler-cdylib/: Cargo.toml
crates/cuda-oxide-compiler-cdylib/src/: lib.rs
crates/cuda-oxide-compiler/src/: compile_core.rs  main.rs
crates/cuda-oxide-compiler/tests/fixtures/broken_kernel/src/: main.rs
crates/cuda-oxide-compiler/tests/golden/: .gitignore  vecadd.sm_80.ptx
crates/dialect-llvm/: README.md
crates/dialect-nvvm/: README.md
crates/fuzzer/: README.md
crates/libmode-consumer/: Cargo.toml
crates/libmode-consumer/src/: main.rs
crates/libnvvm-sys/: README.md
crates/llvm-export/: README.md
crates/mir-importer/: Cargo.toml
crates/oxide-artifacts/: README.md
crates/oxide-signals/: Cargo.toml  README.md  SCHEMA.md
crates/oxide-signals/src/: emitter.rs  lib.rs  otel.rs  tests.rs  types.rs
crates/rustc-codegen-cuda/: Cargo.toml  README.md  STATUS.md  build.rs  codegen_backend.def
crates/rustc-codegen-cuda/examples/array_const_repro/: Cargo.toml
crates/rustc-codegen-cuda/examples/array_const_repro/src/: main.rs
crates/rustc-codegen-cuda/examples/array_eq_raw/: Cargo.toml
crates/rustc-codegen-cuda/examples/array_eq_raw/src/: main.rs
crates/rustc-codegen-cuda/examples/array_of_tuple_const/: Cargo.toml
crates/rustc-codegen-cuda/examples/array_of_tuple_const/src/: main.rs
crates/rustc-codegen-cuda/examples/array_to_int_cast/: Cargo.toml
crates/rustc-codegen-cuda/examples/array_to_int_cast/src/: main.rs
crates/rustc-codegen-cuda/examples/assert_inhabited_intrinsic/: Cargo.toml
crates/rustc-codegen-cuda/examples/assert_inhabited_intrinsic/src/: main.rs
crates/rustc-codegen-cuda/examples/barrier_div/: Cargo.toml
crates/rustc-codegen-cuda/examples/barrier_div/src/: main.rs
crates/rustc-codegen-cuda/examples/base58_limb_divrem/: Cargo.toml
crates/rustc-codegen-cuda/examples/base58_limb_divrem/src/: main.rs
crates/rustc-codegen-cuda/examples/black_box_aggregate/: Cargo.toml
crates/rustc-codegen-cuda/examples/black_box_aggregate/src/: main.rs
crates/rustc-codegen-cuda/examples/black_box_intrinsic/: Cargo.toml
crates/rustc-codegen-cuda/examples/black_box_intrinsic/src/: main.rs
crates/rustc-codegen-cuda/examples/closure_struct_arg_mismatch/: Cargo.toml
crates/rustc-codegen-cuda/examples/closure_struct_arg_mismatch/src/: main.rs
crates/rustc-codegen-cuda/examples/closure_zero_captures_repro/: Cargo.toml
crates/rustc-codegen-cuda/examples/closure_zero_captures_repro/src/: main.rs
crates/rustc-codegen-cuda/examples/cross_crate_pubfn/: Cargo.toml
crates/rustc-codegen-cuda/examples/cross_crate_pubfn/shallenge-logic/: Cargo.toml
crates/rustc-codegen-cuda/examples/cross_crate_pubfn/shallenge-logic/src/: lib.rs
crates/rustc-codegen-cuda/examples/cross_crate_pubfn/src/: main.rs
crates/rustc-codegen-cuda/examples/cuda_module_nested/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/cuda_module_nested/src/: main.rs
crates/rustc-codegen-cuda/examples/cuda_module_nested/src/kernels/: double.rs
crates/rustc-codegen-cuda/examples/cuda_module_nested/src/stages/: offset.rs
crates/rustc-codegen-cuda/examples/deref_const_index_array_write/: Cargo.toml
crates/rustc-codegen-cuda/examples/deref_const_index_array_write/src/: main.rs
crates/rustc-codegen-cuda/examples/deref_field_index_write/: Cargo.toml
crates/rustc-codegen-cuda/examples/deref_field_index_write/src/: main.rs
crates/rustc-codegen-cuda/examples/deref_index_local_write/: Cargo.toml
crates/rustc-codegen-cuda/examples/deref_index_local_write/src/: main.rs
crates/rustc-codegen-cuda/examples/deref_index_trait_dispatch/: Cargo.toml
crates/rustc-codegen-cuda/examples/deref_index_trait_dispatch/src/: main.rs
crates/rustc-codegen-cuda/examples/device_unsafe_repro/: Cargo.toml
crates/rustc-codegen-cuda/examples/device_unsafe_repro/src/: main.rs
crates/rustc-codegen-cuda/examples/divrem_large_const/: Cargo.toml
crates/rustc-codegen-cuda/examples/divrem_large_const/src/: main.rs
crates/rustc-codegen-cuda/examples/drop_adt_no_impl/: Cargo.toml
crates/rustc-codegen-cuda/examples/drop_adt_no_impl/src/: main.rs
crates/rustc-codegen-cuda/examples/drop_adt_with_impl/: Cargo.toml
crates/rustc-codegen-cuda/examples/drop_adt_with_impl/src/: main.rs
crates/rustc-codegen-cuda/examples/drop_copy_primitive/: Cargo.toml
crates/rustc-codegen-cuda/examples/drop_copy_primitive/src/: main.rs
crates/rustc-codegen-cuda/examples/enzyme_autodiff/: Cargo.toml  README.md  enzyme.sh
crates/rustc-codegen-cuda/examples/enzyme_autodiff/.cargo/: config.toml
crates/rustc-codegen-cuda/examples/enzyme_autodiff/src/: main.rs
crates/rustc-codegen-cuda/examples/field_addr_tuple/: Cargo.toml
crates/rustc-codegen-cuda/examples/field_addr_tuple/src/: main.rs
crates/rustc-codegen-cuda/examples/field_index_field_write/: Cargo.toml
crates/rustc-codegen-cuda/examples/field_index_field_write/src/: main.rs
cuda-oxide-book/: requirements.txt
cuda-oxide-book/appendix/: api-quick-reference.md  building-from-source.md  supported-features.md
cuda-oxide-book/compiler/: architecture-overview.md  lowering-pipeline.md  mir-importer.md
cuda-oxide-book/getting-started/: installation.md
intrinsics/: abi-v1.toml  catalog.json  generated-reference.md  imported.json  overlay.toml
scripts/: smoketest.sh
(+1402 files in other folders)
