[package]
name = "array_to_int_cast"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]

# Reproducer for the mir-lower limitation:
# `bitcast [N x i8] to iX` (or any aggregate-array → scalar cast) is
# invalid LLVM. `emit_pointer_cast` in
# `crates/mir-lower/src/convert/ops/cast.rs` handles struct↔scalar
# transmute via a memory round-trip (alloca + store + load) but
# has no equivalent arm for `MirArrayType` sources/destinations, so
# `[i8; 4] → i32` falls through to the catch-all `bitcast`.
#
# Build with:
#   cargo oxide build array_to_int_cast
#
# Until the fix lands: llc fails with
#   "invalid cast opcode for cast from '[4 x i8]' to 'i32'".

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
