[package]
name = "assert_inhabited_intrinsic"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]

# Known-failure repro for unhandled `core::intrinsics::assert_inhabited`.
# Runtime no-op `#[rustc_intrinsic]` — compile-time check that T is
# inhabited. Surfaces from `MaybeUninit::assume_init()`.
#
# Build with:
#   cargo oxide build assert_inhabited_intrinsic

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
