[package]
name = "barrier_div"
version = "0.1.0"
edition = "2024"
authors = ["Haixuan Xavier Tao <tao.xavier@outlook.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Regression guard: convergent barriers after divergent lane-0 sections.
# Deadlocks if rustc's JumpThreading MIR pass duplicates a bar.sync across
# if-arms (cargo-oxide disables it via -Z mir-enable-passes=-JumpThreading).
# Build with:
#   cargo oxide run barrier_div

[dependencies]
# Device-side intrinsics (barriers, thread indexing, SharedArray, etc.)
cuda-device = { path = "../../../cuda-device" }

# Host-side utilities (CudaKernel trait, etc.)
cuda-host = { path = "../../../cuda-host" }

# Host-side CUDA runtime
cuda-core = { path = "../../../cuda-core" }
