[package]
name = "divrem_large_const"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]

# Candidate repro for Bug B: divide / mod by a large constant
# (specifically 58^5 = 656_356_768, the per-limb divisor in
# base58_encode). Slot 59 of vanity-miner-rs (x / 58, small divisor)
# PASSes; slot 3 (base58 with real input) FAILs. The discriminator
# may be the magic-multiply constant size — small divisors produce
# different shift counts than 30-bit ones.
#
# Build with:
#   cargo oxide build divrem_large_const
[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
